--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "grunt-contrib-jshint": "~0.6.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-nodeunit": "~0.2.1",
-    "grunt": "~0.4.0"
+    "grunt": "^1.0.0"
   },
   "peerDependencies": {
-    "grunt": "~0.4.0"
+    "grunt": ">=0.4.0"
   },
   "keywords": [
     "gruntplugin",
